style: fix featured image crop on small screens

--- a/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_post.css
+++ b/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_post.css
@@ -91,9 +91,10 @@ h3.wp-block-heading {
 
 .wp-block-post-featured-image > img {
     display: block;
-    width: auto;
-    height: 40vh;
-    margin: auto;
+    width: 100%;
+    max-height: 40vh;
+    object-fit: contain;
+    object-position: 50%;
 }
 
 /**
